# dominionator

./: .gitignore  Cargo.toml  README.md  plan.md  pyproject.toml
proptest-regressions/: policy.txt  state.txt
python/: main.py
python/dominionator/: main.py  nn.py  nn_test.py  training.py
src/: actions.rs  cards.rs  embeddings.rs  lib.rs  mcts.rs  pile.rs  policy.rs  pybridge.rs  self_play.rs  state.rs  types.rs  utils.rs
