[package]
name = "dominionator_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "dominionator_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
approx = "0.5.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
indicatif = "0.17.9"
more-asserts = "0.3.1"
num_cpus = "1.16.0"
proptest = "1.6.0"
rand = { version = "0.8", features = ["small_rng"] }
