[project]
name = "dominionator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses-json>=0.6.7",
    "einops>=0.8.0",
    "icecream>=2.1.3",
    "loguru>=0.7.3",
    "maturin>=1.8.1",
    "numpy>=2.2.1",
    "pytest>=8.3.4",
    "pytorch-lightning>=2.5.0.post0",
    "typer>=0.15.1",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "dominionator.dominionator_rust"

[tool.uv]
managed = true
dev-dependencies = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.23.3",
  "pyright>=1.1.345",
  "jupyterlab>=4.0.10",
  "pandas>=2.1.4",
  "rankit>=0.3.3",
  "ruff>=0.6.8",
]

[tool.pyright]
typeCheckingMode = "basic"
extraPaths = ["python"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["python"]
filterwarnings = [
  # Disable warnings we get form pytorch lightning that clutter pytest output
  "ignore:pkg_resources is deprecated.*:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace`.*:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
  "ignore:You are trying to `self.log()` but the `self.trainer` reference is not registered on the model yet.*",
]
